--- a/reflex-dom.cabal
+++ b/reflex-dom.cabal
@@ -38,7 +38,7 @@ flag build-examples
 library
   hs-source-dirs: src
   build-depends:
-    aeson >= 0.8 && < 1.1,
+    aeson,
     base >= 4.7 && < 4.10,
     bifunctors >= 4.2 && < 6,
     bimap >= 0.3 && < 0.4,
